# brownie

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
images/: Brownie-small.xcf  brownie-ui.xcf
openspec/changes/archive/2026-02-21-spec-1/: design.md  tasks.md
openspec/changes/archive/2026-02-21-spec-2/: design.md  tasks.md
openspec/changes/refactor-canvas/: design.md  proposal.md  tasks.md
openspec/changes/refactor-canvas/specs/app-shell/: spec.md
openspec/changes/refactor-canvas/specs/canvas-block-lifecycle/: spec.md
openspec/changes/refactor-canvas/specs/canvas-workspace/: spec.md
openspec/changes/refactor-canvas/specs/copilot-client/: spec.md
openspec/changes/refactor-canvas/specs/session-persistence/: spec.md
openspec/changes/refactor-canvas/specs/ui-event-log/: spec.md
openspec/changes/refactor-canvas/specs/ui-runtime/: spec.md
openspec/changes/spec-1/: proposal.md  tasks.md
openspec/changes/spec-1/specs/copilot-client/: spec.md
openspec/changes/spec-2/: proposal.md
openspec/changes/spec-2/specs/app-shell/: spec.md
openspec/changes/spec-3/: design.md  proposal.md  tasks.md
openspec/specs/app-shell/: spec.md
openspec/specs/component-registry/: spec.md
openspec/specs/copilot-client/: spec.md
openspec/specs/session-persistence/: spec.md
openspec/specs/ui-event-log/: spec.md
openspec/specs/ui-runtime/: spec.md
orig-specs/: more-ui-changes.md
requirements/: 01-spec-ui.md  04-ui-refactoring.md
specs/: SPEC-001-initial-implementation.md  SPEC-002-improved-feedback.md  SPEC-003-Improve-information-detail.md  SPEC-004-Direct-Doc-Synthesis.md  base-spec.md  spec-ui-style.md
src/: app.rs  event.rs  main.rs  theme.rs
src/brownie/: __init__.py  agent_runtime.py  analysis_helpers.py  analyze.py  cache.py  cli.py  config.py  docs.py  feedback.py  fs.py
src/brownie/prompts/: __init__.py
src/brownie/prompts/templates/: dotnet.md  generic.md  go.md  java.md  nodejs.md  python.md  react.md
src/copilot/: mod.rs
src/session/: mod.rs  store.rs
src/ui/: catalog.rs  event.rs  fixture.json  intent.rs  mod.rs  registry.rs  runtime.rs  schema.rs  workspace.rs
src/ui/catalog_builtin/: code_review.json  file_listing.json  plan_review.json
tests/: test_analysis_helpers.py  test_feedback.py  test_inventory_cache.py
(+10 files in other folders)
