[package]
name = "brownie"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brownie"
path = "src/main.rs"

[dependencies]
copilot-sdk = { path = "vendor/copilot-sdk-rust" }
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
