[project]
name = "brownie"
version = "0.1.0"
description = "Codebase to docs while you sleep"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "github-copilot-sdk>=0.1.10",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "typer>=0.9.0",
]

[project.scripts]
brownie = "brownie.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brownie = ["prompts/templates/*.j2"]
