[project]
name = "brownie"
version = "0.1.0"
description = "Codebase to docs while you sleep"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "github-copilot-sdk>=0.1.10",
]

[project.scripts]
brownie = "brownie.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brownie = ["prompts/templates/*.j2", "prompts/templates/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
